--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
-    <title>cumpapierno</title>
+    <title>kamienpapiernozyce</title>
 </head>
 <body>
     <h4>Kamień, papier, czy nożyce?</h4>
