--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
-    <title>kamienpapiernozyce</title>
+    <title>papierkamiennozyce</title>
 </head>
 <body>
-    <h4>Kamień, papier, czy nożyce?</h4>
+    <div id="div10">
+    <h4>Kamień, papier, czy nożyce?</h4></div>
     <br><br><br><br><br>
     <div id="div1">
         <button onclick="Gra(0)">Papier</button>
@@ -17,6 +18,6 @@
         <button onclick="Gra(2)">Nożyce</button>
     </div>
     <br><br><br><br><br>
-    <h4 id="wynik"></h4>
+    <div id="div20"><h4 id="wynik"></h4></div>
 </body>
 </html>
