--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h4>Kamień, papier, czy nożyce?</h4></div>
     <br><br><br><br><br>
     <div id="div1">
-        <button onclick="Gra(0)">Papier</button>
-        <button onclick="Gra(1)">Kamień</button>
-        <button onclick="Gra(2)">Nożyce</button>
+        <button onclick="Gra(0)"><img src="papier.webp"></button>
+        <button onclick="Gra(1)"><img src="kamienn.webp"></button>
+        <button onclick="Gra(2)"><img src="nozyce.png"></button>
     </div>
     <br><br><br><br><br>
     <div id="div20"><h4 id="wynik"></h4></div>
-</body>
+   
 </html>
